# lune-packaging

./: .gitattributes  .gitmodules  .justfile  README.md  lune.COMMIT
.github/workflows/: action_test.yaml  action_update.yaml  android.yaml  appimage.yaml  appimage.yaml.old  apt.yaml  aur.yaml  aur.yml  aur_test.yaml  ci.yaml  homebrew_test.yaml  scoop_test.yaml  test.yaml  update.yaml
Formula/: lune.rb
bucket/: lune.json
package/action/: .editorconfig  .gitignore  Cargo.toml  README.md  action.yml  rustfmt.toml
package/action/src/: download.rs  fmt.rs  github.rs  lib.rs  main.rs  types.rs
package/android/: build.sh
package/android/.cargo/: config
package/appimage/: lune.yml  lune_amd64.yml
package/appimage/lune.AppDir/: .DirIcon  lune.desktop
package/aur/: Dockerfile  lune-git.PKGBUILD  lune-git.PKGBUILD.OLD  lune.PKGBUILD  publish.sh  utils.sh
package/aur/lune/: .SRCINFO  PKGBUILD
package/aur/lune-bin/: .SRCINFO  PKGBUILD
package/aur/lune-git/: .SRCINFO  PKGBUILD
package/copr/: lune.spec
package/dpkg/apt/: index.html
package/dpkg/deb/: lune-0.10.1-1_arm64.deb  lune-0.10.2-1_arm64.deb  lune-0.10.2-1_x86-64.deb  lune-0.7.10-1_x86-64.deb  lune-0.7.11-1_arm64.deb  lune-0.7.5-1_arm64.deb  lune-0.7.7-1_arm64.deb  lune-0.7.8-1_arm64.deb  update_bins.sh  (+7 more)
package/js/: .gitignore  LICENSE.md  README.md  build.ts  consts.toml  consts.ts  deno.json  github.ts  install.ts
package/scoop/: lune.json  manifest.json
test/aur/: Dockerfile  entrypoint.sh
test/scoop/: entrypoint.ps1
tests/aur/: Dockerfile  entrypoint.sh
utils/: readme_update.py
(+94 files in other folders)
