[package]
name = "setup-lune"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"
strip = true
lto = true

[dependencies]
actions-core = "0.0.2"
anyhow = "1.0.75"
better-panic = "0.3.0"
colored = "2.0.4"
directories = "5.0.1"
home = "0.5.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tracing = "0.1.37"
tracing-core = "0.1.31"
tracing-subscriber = "0.3.17"
tracing-unwrap = "0.10.0"
ureq = "2.7.1"
url = "2.4.1"
zip = "0.6.6"
